FIX: Cleaning up sidebar word-wrapping (fixes #76)

--- a/static/css/story.css
+++ b/static/css/story.css
@@ -702,10 +702,10 @@ div#pagepiling {
 }
 .sidebar-tooltip {
     font-size: 13px;
-    padding: 20px 5px 10px 5rem;
-    text-indent: -2rem;
+    padding: 20px 5px 10px 15px;
     font-weight: 300;
     border-bottom: 2px dotted #dfdfdf;
+    overflow-wrap: break-word;
 }
 
 
@@ -724,7 +724,6 @@ div#pp-nav {
     display: none !important;
 }
 .sidebar-tooltip img {
-    margin-left: -2rem !important;
     width: 2.5rem;
     padding: 0  !important;
     padding-right: 5px !important;
@@ -734,6 +733,8 @@ div#pp-nav {
     padding-right: 5px;
     margin-right: 5px;
     opacity: .6;
+    float: left;
+    width: 2.5rem;
 }
 .prev-box{
   box-shadow: 1px 2px 7px #0000006b;
